--- a/style/section1.css
+++ b/style/section1.css
@@ -1,12 +1,5 @@
-:root {
-  --primary-color: #314a52; 
-  --accent-color: #ffda5a;
-  --text-dark: #222;
-  --white: #ffffff;
-}
-
 .section1 {
-    width: 100%; 
+    width: 100%;
     max-width: 1440px;
     height: 296px;
     margin: 0 auto;
@@ -15,18 +8,46 @@
     justify-content: center;
     align-items: center;
     border: 1px solid #D6D6D6;
-    background-color: #f9f9f9; 
+    background-color: #f9f9f9;
+}
+
+.section1 p {
+    font-family: sans-serif;
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #000;
 }
 
 .logo-container {
     display: flex;
-    gap: 40px; 
-    margin-top: 20px;
+    gap: 40px;
 }
 
 .logo-placeholder {
-    width: 100px;
-    height: 80px;
-    border: 1px solid #ccc;
-    background: white;
+    width: 140px;
+    height: 100px;
+    background-color: #ffffff;
+    border: 1px solid #999;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.logo-placeholder::before, 
+.logo-placeholder::after {
+    content: "";
+    position: absolute;
+    width: 130%;
+    height: 1px;
+    background-color: #dad9d9fd;
+}
+
+.logo-placeholder::before { 
+    transform: rotate(35deg); 
+}
+
+.logo-placeholder::after { 
+    transform: rotate(-35deg); 
 }
