--- a/style/header.css
+++ b/style/header.css
@@ -104,6 +104,7 @@ body {
   padding: 48px;
   max-width: 513px;
   width: 100%;
+  min-height: 458px;
 }
 
 .badge {
@@ -154,6 +155,10 @@ body {
   padding: 48px;
   max-width: 286px;
   width: 100%;
+  min-height: 458px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   text-align: center;
 }
 
@@ -162,7 +167,7 @@ body {
 }
 
 .demo-content h2 {
-  font-size: 32px;
+  font-size: 30px;
   color: black;
   margin-bottom: 24px;
 }
